Added new entitie RecipeWithAuthor
