# backend/docs/swagger.json
@@ -206,7 +206,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.Recipe"
+                                "$ref": "#/definitions/entities.RecipeWithAuthor"
                             }
                         }
                     },
@@ -244,7 +244,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.Recipe"
+                                "$ref": "#/definitions/entities.RecipeWithAuthor"
                             }
                         }
                     },
@@ -1159,6 +1159,17 @@
             "properties": {
                 "info": {
                     "$ref": "#/definitions/entities.FullRecipe"
+                }
+            }
+        },
+        "entities.RecipeWithAuthor": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "$ref": "#/definitions/entities.Author"
+                },
+                "recipe": {
+                    "$ref": "#/definitions/entities.Recipe"
                 }
             }
         },
